Changed the card title to smaller on tablets to resolve responsiveness issues.

--- a/mixologymaster/static/css/style.css
+++ b/mixologymaster/static/css/style.css
@@ -278,6 +278,14 @@ footer {
     }
 }
 
+
+@media only screen and (min-width: 1024px) and (max-width: 1279px){
+    .cocktail-name {
+        font-size: 1rem;
+    }
+    
+}
+
 /*error handling (404) and (500)*/
 
 .error-container {
